; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest1.c_testReopenRecover.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest1.c_testReopenRecover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"bak.db\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testReopenRecover(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %26

10:                                               ; preds = %2
  %11 = load i32**, i32*** %3, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = call i8* @tdb_library_name(i32* %12)
  store i8* %13, i8** %5, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i8* @tdb_default_db(i8* %14)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @testCopyLsmdb(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = load i32**, i32*** %3, align 8
  %19 = call i32 @testClose(i32** %18)
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @testCopyLsmdb(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %20)
  %22 = load i8*, i8** %5, align 8
  %23 = load i32**, i32*** %3, align 8
  %24 = call i32 @tdb_open(i8* %22, i32 0, i32 0, i32** %23)
  %25 = load i32*, i32** %4, align 8
  store i32 %24, i32* %25, align 4
  br label %26

26:                                               ; preds = %10, %2
  ret void
}

declare dso_local i8* @tdb_library_name(i32*) #1

declare dso_local i8* @tdb_default_db(i8*) #1

declare dso_local i32 @testCopyLsmdb(i8*, i8*) #1

declare dso_local i32 @testClose(i32**) #1

declare dso_local i32 @tdb_open(i8*, i32, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
